--- a/haskell-samp.cabal
+++ b/haskell-samp.cabal
@@ -17,6 +17,7 @@ library
   exposed-modules:     Samp
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
+  include-dirs:        include/samp-plugin-sdk
 
 source-repository head
   type:     git
