--- a/haskell-samp.cabal
+++ b/haskell-samp.cabal
@@ -13,6 +13,7 @@ extra-source-files:  README.md
 cabal-version:       >=2.0
 
 library
+  build-tools:         c2hs
   hs-source-dirs:      src
   exposed-modules:     Samp
   build-depends:       base >= 4.7 && < 5
