--- a/haskell-samp.cabal
+++ b/haskell-samp.cabal
@@ -16,6 +16,7 @@ library
   build-tools:         c2hs
   hs-source-dirs:      src
   exposed-modules:     Samp
+  other-modules:       Samp.Internal
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
   include-dirs:        include/samp-plugin-sdk
