--- a/haskell-samp.cabal
+++ b/haskell-samp.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Samp
   other-modules:       Samp.Internal
+                     , Samp.Common
                      , Samp.Internal.Constants
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
